# per.li

./: .gitignore  Cargo.toml  Dockerfile  build.rs  main.py
.parcel-cache/: 75be08d0ab1028b9  781fd7abd0fcf459.txt  data.mdb  f6d91b7516ef8d0d  lock.mdb
ext/ech/: go.mod  main.go
ext/fi/: go.mod  main.go
ext/fi/public/: index.html
ext/fib/: go.mod  main.go
lib/cli/src/: lib.rs
lib/kgraph/: Cargo.toml
lib/parse/: Cargo.toml
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/golang.org/x/tools/: gopls@v0.8.4
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x041/: 544
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x041/544.p/: 162
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x042/574.p/: 162
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/1/162.p/: 72
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/1/166.p/: 78
pkg/sumdb/sum.golang.org/: latest
proto/: root.proto  user.proto
src/: app.rs  db.rs  lib.rs  main.rs
src/auth/: mod.rs
src/code/: mod.rs
src/models/: mod.rs
src/models/user/: mod.rs
src/rt/: chat.rs  mod.rs
src/user/: mod.rs
static/: index.html
static/auth/: login.html
